basic work done
mostly just a small start. I added a css external file that you can
define general or class specific css layouts in.

--- a/MockUp/choosePlanet.html
+++ b/MockUp/choosePlanet.html
@@ -1,1 +1,18 @@
+<!doctype html>
 
+<html>
+	<head>
+		<link rel="stylesheet" href="mockUpcss.css">
+		<title> choose planet </title>
+	</head>
+	<body>
+		<div class="solarSystem">
+			<img src="solarSystem.jpeg" id="map" usemap="#destinations">
+			<map name="destination">
+				
+		</div>
+	
+		
+	</body>
+	
+</html>
