--- a/MockUp/index.html
+++ b/MockUp/index.html
@@ -1,1 +1,17 @@
+<!doctype html>
 
+<html>
+	<head>
+		<link rel="stylesheet" href="mockUpcss.css">
+		<title>
+		start Screen
+		</title>
+	</head>
+	
+	<body>
+		<center><div class = "Welcome">
+		<h1> <a href ="interIntra.html"> Welcome! </a></h1> 
+		</div> </center>
+	</body>
+
+</html>
