--- a/MockUp/choosePlanet.html
+++ b/MockUp/choosePlanet.html
@@ -9,7 +9,8 @@
 		<div class="solarSystem">
 			<img src="solarSystem.jpeg" id="map" usemap="#destinations">
 			<map name="destination">
-				
+				<area shape = "circle" href="C/Users/Harvey/Documents/GitHub/NewNewYorkKiosk/HCIMockUp/HCIMockUpTickets.html" coords= "384, 183, 2,2">
+			</map>
 		</div>
 	
 		
