made my files match the others

--- a/HCIMockUp/index.html
+++ b/HCIMockUp/index.html
@@ -3,6 +3,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="mockUpcss.css">
+		<link rel="stylesheet" href="HCIMockUpTickets.css">
 		<title>
 		start Screen
 		</title>
