--- a/HCIMockUp/interIntra.html
+++ b/HCIMockUp/interIntra.html
@@ -3,10 +3,12 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="mockUpcss.css">
+		<link rel="stylesheet" href="HCIMockUpTickets.css">
 		<title> rocket or tube </title>
 	</head>
 	
 	<body>
+	
 		<center>
 		<div class = "choices"> <a href="choosePlanet.html"> <p>Purchase a Rocket Ship Ticket</p> </a></div>
 		<div class = "choices"> <p>Purchase a Tube Ticket</p> </div>
