added an audio button.
I'm pretty sure that you can add a hyper link to the div, or if that
doesnt work, you can add an on click funtion that plays the audio.

--- a/HCIMockUp/HCIMockUpConfirmation.html
+++ b/HCIMockUp/HCIMockUpConfirmation.html
@@ -16,15 +16,17 @@
     font-family: Impact, Monospace;
   }
 </style>
+<div class="consolButton"> <p class="audio">audio</p></div>
 
+<center>
 <h2>Tickets</h2>
-
 <!-- number 1 is hard coded -->
 <p>You ordered 1 ticket.</p>
 <p>If this is correct please select "Yes".</p>
-
+<center>
 
 <form action="/submit-ticket-number">
+  
   <!-- Yes button directs to final screen -->
   <button type="yes"><a href="HCIMockUpFinal.html">Yes</a></button>
   
