--- a/HCIMockUp/HCIMockUpFinal.html
+++ b/HCIMockUp/HCIMockUpFinal.html
@@ -12,9 +12,10 @@
     font-family: Impact, Monospace;
   }
 </style>
-
+<div class="consolButton"> <p class="audio"> audio </p></div>
+<center>
 <!-- number 1 is hard coded -->
 <p>Thank you for your purchase!</p>
-
+</center>
 </html>
 
