--- a/HCIMockUp/HCIMockUpTickets.html
+++ b/HCIMockUp/HCIMockUpTickets.html
@@ -22,15 +22,18 @@
   
 
 </style>
-
+<div class="consolButton"> <p>audio</p></div>
+<center>
 <h2>Tickets</h2>
 
 <p>How many tickets?</p>
-
+</center>
 
 <form action="/submit-ticket-number">
+  <center>
   <input type="text" placeholder="ticket quantity">
   <button type="submit"><a href="HCIMockUpConfirmation.html">Submit</a></button>
+  </center>
 </form>
 </html>
 
