--- a/HCIMockUp/interIntra.html
+++ b/HCIMockUp/interIntra.html
@@ -8,7 +8,7 @@
 	</head>
 	
 	<body>
-	
+		<div class="consolButton"> <p>audio</p></div>
 		<center>
 		<div class = "choices"> <a href="choosePlanet.html"> <p>Purchase a Rocket Ship Ticket</p> </a></div>
 		<div class = "choices"> <p>Purchase a Tube Ticket</p> </div>
