forgot about these files

--- a/HCIMockUp/HCIMockUpConfirmation.html
+++ b/HCIMockUp/HCIMockUpConfirmation.html
@@ -16,7 +16,7 @@
     font-family: Impact, Monospace;
   }
 </style>
-<div class="consolButton"> <p class="audio">audio</p></div>
+<div class="consolButton"> <p>audio</p></div>
 
 <center>
 <h2>Tickets</h2>
