moved files and added audio div

--- a/MockUp/HCIMockUpFinal.html
+++ b/MockUp/HCIMockUpFinal.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 <link rel="stylesheet" type="text/css" href="HCIMockUpTickets.css"/>
 </head>
 <style>
@@ -12,10 +13,10 @@
     font-family: Impact, Monospace;
   }
 </style>
-
+<div class="consolButton" id="audioButton"> <p>audio</p></div>
 <!-- number 1 is hard coded -->
 <p>Thank you for your purchase!</p>
-<img src="PlanetExpress.jpg" alt="Planet Express Icon" style="width:600px;height:600px;">
+<a  href="index.html"> <img src="PlanetExpress.jpg" alt="Planet Express Icon" style="width:600px;height:600px;"></a>
 <audio autoplay="true" src="Final.mp3">
 </html>
 
