--- a/MockUp/HCIMockUpTickets.html
+++ b/MockUp/HCIMockUpTickets.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script language= "javascript">
+	
+	
+</script>
 <link rel="stylesheet" type="text/css" href="HCIMockUpTickets.css"/>
 </head>
 <style>
@@ -22,7 +26,7 @@
   
 
 </style>
-
+<div class="consolButton" id="audioButton"> <p>audio</p></div>
 <h2>Tickets</h2>
 
 <p>How many tickets?</p>
