--- a/MockUp/choosePlanet.html
+++ b/MockUp/choosePlanet.html
@@ -3,17 +3,20 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="mockUpcss.css">
+		<link rel="stylesheet" href="HCIMockUpTickets.css">
 		<title> choose planet </title>
 	</head>
 	<body>
+		<div class="consolButton" id="audioButton"> <p>audio</p></div>
+		<center>
 		<div class="solarSystem">
 			<img src="solarSystem.jpeg" id="map" usemap="#destinations">
-			<map name="destination">
-				<area shape = "circle" href="C/Users/Harvey/Documents/GitHub/NewNewYorkKiosk/HCIMockUp/HCIMockUpTickets.html" coords= "384, 183, 2,2">
+			<map name="destinations">
+				<area shape = "circle" href="HCIMockUpMars.html" coords= "433, 220, 40" alt="mars">
 			</map>
 		</div>
-	
+		</center>
 		
 	</body>
-	
+	<audio autoplay="true" src="WhichPlanet.mp3">
 </html>
