--- a/MockUp/index.html
+++ b/MockUp/index.html
@@ -3,15 +3,17 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="mockUpcss.css">
+		<link rel="stylesheet" href="HCIMockUpTickets.css">
 		<title>
 		start Screen
 		</title>
 	</head>
 	
 	<body>
+	<div class="consolButton" onclick="playAudio()"><p>audio<p></div>
 		<center><div class = "Welcome">
 		<h1> <a href ="interIntra.html"> Welcome! </a></h1> 
 		</div> </center>
 	</body>
-
+<audio autoplay="true" src="PlanetExpress.mp3">
 </html>
