--- a/MockUp/interIntra.html
+++ b/MockUp/interIntra.html
@@ -2,15 +2,18 @@
 
 <html>
 	<head>
+	
 		<link rel="stylesheet" href="mockUpcss.css">
+		<link rel="stylesheet" href="HCIMockUpTickets.css">
 		<title> rocket or tube </title>
 	</head>
 	
 	<body>
+		<div class="consolButton" id="audioButton"> <p>audio</p></div>
 		<center>
 		<div class = "choices"> <a href="choosePlanet.html"> <p>Purchase a Rocket Ship Ticket</p> </a></div>
 		<div class = "choices"> <p>Purchase a Tube Ticket</p> </div>
 		<center>
 	</body>
-	
+	<audio autoplay src="RocketTube.mp3">
 </html>
