--- a/MockUp/HCIMockUpConfirmation.html
+++ b/MockUp/HCIMockUpConfirmation.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+
 <link rel="stylesheet" type="text/css" href="HCIMockUpTickets.css"/>
 </head>
 <style>
@@ -16,7 +17,7 @@
     font-family: Impact, Monospace;
   }
 </style>
-
+<div class="consolButton" id="audioButton"> <p>audio</p></div>
 <h2>Tickets</h2>
 
 <!-- number 1 is hard coded -->
