forgot to add a p class

--- a/MockUp/HCIMockUpFinal.html
+++ b/MockUp/HCIMockUpFinal.html
@@ -13,7 +13,7 @@
     font-family: Impact, Monospace;
   }
 </style>
-<div class="consolButton" id="audioButton"> <p>audio</p></div>
+<div class="consolButton" id="audioButton"> <p class="audioButton">audio</p></div>
 <!-- number 1 is hard coded -->
 <p>Thank you for your purchase!</p>
 <a  href="index.html"> <img src="PlanetExpress.jpg" alt="Planet Express Icon" style="width:600px;height:600px;"></a>
